Remove body margin

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
                 <title>Personal page of Artem Asinov</title>
             </head>
-            <body>
+            <body style="margin: 0px">
                 <div id="clouds"></div>
             
                 <script src="Scripts/three.r92.min.js" ></script>
