--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 							<ul class="icons">
 								<li><a href="https://t.me/asinov" class="fa-telegram">Telegram</a></li>
 								<li><a href="https://www.linkedin.com/in/asinov/" class="fa-linkedin">Linkedin</a></li>
-								<li><a href="https://join.skype.com/invite/onc1iqkaigmJ" class="fa-skype">Skype</a></li>								
+								<li><a href="https://join.skype.com/invite/onc1iqkaigmJ" class="fa-skype">Skype</a></li>
+								<li><a href="mailto://artem.asinov@gmail.com" class="fa-envelope">E-mail</a></li>
 							</ul>
 						</footer>
 					</section>
