--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Artem Asinov</h1>
-							<p>Senior Software Developer</p>
+							<p>Senior Software Engineer</p>
 						</header>
 						<footer>
 							<ul class="icons">
