--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<li><a href="https://t.me/sunset_superman" class="fa-telegram">Telegram</a></li>
 								<li><a href="https://www.linkedin.com/in/asinov/" class="fa-linkedin">Linkedin</a></li>
 								<li><a href="https://join.skype.com/invite/onc1iqkaigmJ" class="fa-skype">Skype</a></li>
-								<li><a href="mailto://artem.asinov@gmail.com" class="fa-envelope">E-mail</a></li>
+								<li><a href="mailto://artem@asinov.net" class="fa-envelope">E-mail</a></li>
 							</ul>
 						</footer>
 					</section>
